...
                    action = HomeDrawerAction.OpenTrafficStats,
                ),
            ),
        ),
        HomeDrawerSectionUiModel(
            sectionKey = "setting",
            title = "设置",
            items = listOf(
                HomeDrawerItemUiModel(
                    title = "基础设置",
                    iconRes = HomeIcons.DrawerSettings,
                    anchorTag = FidelityAnchors.Home.DrawerSettingsBasic,
                    action = HomeDrawerAction.OpenSettingsRoot,
                ),
                HomeDrawerItemUiModel(
                    title = "插件管理",
                    iconRes = HomeIcons.DrawerPluginManagement,
                    anchorTag = FidelityAnchors.Home.DrawerSettingsPlugin,
                    action = HomeDrawerAction.OpenPluginManagement,
                ),
                HomeDrawerItemUiModel(
                    title = "主题设置",
...
